# turbojpeg-python

./: .gitignore  README.md  python_bindings_advanced.cpp  test_performance_comparison.py  turbojpeg_decoder.cpp  turbojpeg_decoder.h
.claude/: settings.local.json
native/: CMakeLists.txt  FastParallelEncoder.cpp  ImageEncoder_MultiThread.cpp  ImageEncoder_SingleThread.cpp  MinimalEncoder.cpp  ParallelJpegEncoder.cpp  UniversalJpegEncoder.cpp
